--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,12 @@
 .App {
+  height: 98vh;
   text-align: center;
+  background-image: url("https://media.istockphoto.com/id/472336288/photo/out-of-focus-office-open-corridor-background.jpg?s=612x612&w=0&k=20&c=pjhaH7F7qVH8ku0x-XxSUjeioXB-SKKeuHm715liNhQ=");
+  margin: 0;
+  padding: 0;
+  top: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
